<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/currentIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/currentIp" />

        <TextView
            android:id="@+id/currentPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/currentPort" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip" />

        <EditText
            android:id="@+id/editIpAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:digits=".0123456789"
            android:ems="12"
            android:maxLength="16"
            android:maxLines="1"
            android:minWidth="100dip" />

        <TextView
            android:id="@+id/editIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port" />

        <EditText
            android:id="@+id/editPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="number"
            android:maxLength="5"
            android:minWidth="50dip" />
    </LinearLayout>

</LinearLayout>